--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Go netlify</li>
         <li>Add new site from git</li>
         <li>Profit and change the site name </li>
+        <li> yay</li>
 
     </ol>
 </body>
